%%{
  init: {
    'theme': 'base',
    'themeVariables': {
      'primaryColor': '#ffffff',
      'primaryTextColor': '#000000',
      'primaryBorderColor': '#000000',
      'lineColor': '#000000',
      'secondaryColor': '#f5f5f5',
      'tertiaryColor': '#ffffff'
    },
    'er': {
      'diagramPadding': 20
    }
  }
}%%
%% Generate PNG with: mmdc -i er-diagram.mmd -o er-diagram.png -b white -w 2000 -H 2000
erDiagram
    transactions {
        int id PK
        text account_number "NOT NULL"
        text transaction_date "NOT NULL"
        text description1
        text description2
        text description3
        text debit_amount
        text credit_amount
        text balance "NOT NULL"
        text currency "NOT NULL"
        text transaction_type "NOT NULL"
        text local_currency_amount
        text local_currency
        text grouping_status "manual/auto/none/null"
        int category_id FK "References categories (not in diagram)"
        int transaction_category_id FK "References transaction_categories.id"
        text created_at "NOT NULL DEFAULT now"
    }
    
    parent_categories {
        int id PK
        text name "UNIQUE NOT NULL"
        text description
        timestamp created_at "DEFAULT TIMESTAMP"
    }
    
    categories {
        int id PK
        text name "NOT NULL"
        int parent_id FK
        text description
        timestamp created_at "DEFAULT TIMESTAMP"
    }
    
    transaction_categories {
        int id PK
        int transaction_id FK "NOT NULL UNIQUE"
        int category_id FK "NOT NULL"
        int parent_category_id FK "References parent_categories"
        text created_at "NOT NULL DEFAULT now"
    }
    
    transaction_similarity_patterns {
        int id PK
        text pattern_type "NOT NULL"
        text pattern_value "NOT NULL"
        int parent_category_id FK "References parent_categories"
        int category_id FK "References categories"
        real confidence_score "NOT NULL DEFAULT 1.0"
        timestamp created_at "DEFAULT TIMESTAMP"
        timestamp updated_at "DEFAULT TIMESTAMP"
        int usage_count "DEFAULT 0"
    }
    
    transactions ||--o| transaction_categories : "has one category assignment via transaction_category_id"
    transactions ||--o| categories : "has one direct category via category_id"
    transaction_categories }o--|| categories : "references via category_id"
    transaction_categories }o--|| parent_categories : "references via parent_category_id"
    parent_categories ||--o{ categories : "parent of via parent_id"
    categories ||--o{ transaction_similarity_patterns : "referenced by via category_id"
    parent_categories ||--o{ transaction_similarity_patterns : "referenced by via parent_category_id"
